fix: fix images on mobile

--- a/docs_theme/src/scss/styles.scss
+++ b/docs_theme/src/scss/styles.scss
@@ -100,6 +100,10 @@ pre code {
   border: none;
 }
 
+img {
+  @extend .img-fluid;
+}
+
 .nav-link {
   padding: 2px 15px 3px;
 }
